garde_derive_tests/tests/compile-fail/unknown_rule.stderr
error: unrecognized rule
 --> tests/compile-fail/unknown_rule.rs:3:20
  |
3 |     #[garde(ascii, unknown_rule)]
  |                    ^^^^^^^^^^^^
